--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(trabalho1_DA)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Project1 main.cpp Station.cpp Station.h Path.h Path.cpp Graph.cpp Graph.h App.h App.cpp)
+add_executable(Project1 main.cpp Station.cpp Station.h Path.h Path.cpp Graph.cpp Graph.h App.h App.cpp utils.cpp utils.h)
